# PwCExercise

./: .gitignore  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 271fc5c290cc_initial_migration.py  9244054198de_create_tables.py  e8a1aaf43b61_change_hourly_rate_from_employee_to_.py
src/config/: db.py
src/models/: base.py  department.py  employee.py  job_title.py  performanceReview.py  performance_review.py  salary.py  user.py
src/pwcexercise/config/: db.py
src/pwcexercise/models/: department.py  employee.py  performance_review.py  salary.py
src/pwcexercise/routes/: department.py  employee.py  job_title.py  performance_review.py  salary.py  status.py
src/pwcexercise/schemas/: department.py  employee.py  job_title.py  performance_review.py  salary.py
src/pwcexercise/seeds/: seed.py  seeder.py  seeds.py
src/pwcexercise/services/: department_service.py  employee_service.py  job_title_service.py  performance_review_service.py  salary_service.py
src/pwcexercise/utils/: logger.py
src/routes/: department.py  employee.py  job_title.py  performance_review.py  salary.py  user.py
src/schemas/: department.py  employee.py  perfomanceReview.py  performance_review.py  salary.py  user.py
src/seeds/: seeder.py
